// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxyxibq {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary500);
  cursor: pointer;
  font-family: var(--sx-fonts-sans);
  text-decoration: none;
}

.sxyxibq:focus,
.sxyxibq:hover {
  color: var(--sx-colors-primary900);
  text-decoration: underline;
}

.sxyxibq:active {
  color: var(--sx-colors-primary500);
}

.sxfey5o > .sxyxibq,
.sxe0tmj > .sxyxibq,
.sx03kze > .sxyxibq {
  font-size: 100%;
  line-height: 1;
}

.sxfey5o > .sxyxibq::before,
.sxfey5o > .sxyxibq::after,
.sxe0tmj > .sxyxibq::before,
.sxe0tmj > .sxyxibq::after,
.sx03kze > .sxyxibq::before,
.sx03kze > .sxyxibq::after {
  content: none;
}

.sxyxibqjqqvr--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.625;
}

.sxyxibqjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxyxibqjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

<div>
  <a
    class="sxyxibq sxyxibqjqqvr--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxyxibq {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary500);
  cursor: pointer;
  font-family: var(--sx-fonts-sans);
  text-decoration: none;
}

.sxyxibq:focus,
.sxyxibq:hover {
  color: var(--sx-colors-primary900);
  text-decoration: underline;
}

.sxyxibq:active {
  color: var(--sx-colors-primary500);
}

.sxfey5o > .sxyxibq,
.sxe0tmj > .sxyxibq,
.sx03kze > .sxyxibq {
  font-size: 100%;
  line-height: 1;
}

.sxfey5o > .sxyxibq::before,
.sxfey5o > .sxyxibq::after,
.sxe0tmj > .sxyxibq::before,
.sxe0tmj > .sxyxibq::after,
.sx03kze > .sxyxibq::before,
.sx03kze > .sxyxibq::after {
  content: none;
}

.sxyxibqjqqvr--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.625;
}

.sxyxibqjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxyxibqjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxyxibqg0h8h--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sxyxibqg0h8h--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sxyxibqg0h8h--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sxyxibq sxyxibqg0h8h--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
